# CHIP-8

./: .gitignore  CMakeLists.txt  README.md
src/: chip.cpp  chip.hpp  gl.c  main.cpp  platform.cpp  platform.hpp
src/glad/: gl.h
